fix: fixed stretch image topicItems
fixed strechting of images of topic items on the homepage

--- a/src/core/pages/home/components/TopicItem/TopicItem.css
+++ b/src/core/pages/home/components/TopicItem/TopicItem.css
@@ -38,6 +38,7 @@
 .topicItemContainer img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
     background-color: var(--primary-white);
     border-radius: 20px 20px 0  0;
 }
